--- a/package.json
+++ b/package.json
@@ -8,6 +8,10 @@
     "start": "next start"
   },
   "dependencies": {
+    "@material-ui/core": "^4.9.3",
+    "@material-ui/icons": "^4.9.1",
+    "dotenv": "^8.2.0",
+    "mongodb": "^3.5.3",
     "next": "9.2.2",
     "react": "16.12.0",
     "react-dom": "16.12.0"
