--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   "dependencies": {
     "@material-ui/core": "^4.9.3",
     "@material-ui/icons": "^4.9.1",
+    "axios": "^0.19.2",
     "dotenv": "^8.2.0",
     "mongodb": "^3.5.3",
     "next": "9.2.2",
